--- a/we-deal-cars/package.json
+++ b/we-deal-cars/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node backend/server.js",
+    "dev": "nodemon backend/server.js",
+    "client": "cd frontend && npm start"
   },
   "keywords": [],
   "author": "",
